<resources>
    <string name="app_name">BudgetMe</string>
    <string name="title_activity_add_transaction">AddTransactionActivity</string>
    <string name="label_cost">Cost</string>
    <string name="label_date">Date</string>
    <string name="label_add_an_optional_note">Add an optional note...</string>
    <string name="label_add_expense">Add Expense</string>
    <string name="label_image_import">Import Image</string>
    <string name="label_category">Category</string>
    <string name="label_categories">Categories</string>
    <string name="label_delete">Delete</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_dashboard_tab_summary">Summary</string>
    <string name="title_dashboard_tab_profile">Profile</string>
    <string name="title_dashboard_tab_transaction">Transaction Detail</string>
    <string name="layout_button_create_group">Create Group</string>
    <string name="layout_button_join_group">Join Group</string>
    <string name="layout_image_user_avatar">UserAvatar</string>
    <string name="layout_text_username">User Name</string>
    <string name="layout_text_total_amount">$$</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password_text">Password</string>
    <string name="username_text">Username</string>
    <string name="label_email">Email Account</string>
    <string name="email">Email</string>
    <string name="username_input"></string>
    <string name="label_create_goal">Create Goal</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="button_upload_Image">Upload Image</string>
    <string name="label_limit">Limit</string>
    <string name="label_all_categories">All Categories</string>
    <string name="menu_date">Date</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_users">Users</string>
    <string name="label_all">All</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_reset">Reset</string>
    <string name="alert_start_date">Please enter a start date</string>
    <string name="alert_end_date">Please enter an end date</string>
    <string name="label_new_category">New Category</string>
    <string name="goal_alert_channel_name">Goal Alert Channel</string>
    <string name="goal_alert_channel_description">Delivers alerts for exceeding goal limits</string>
    <string name="label_group_name">Group Name</string>
    <string name="label_other_users">Other Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
