<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3CE91E"
        android:elevation="4dp"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/layout_image_user_avatar"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/UserAvatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:contentDescription="@string/layout_image_user_avatar"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_avatar" />

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/UserAvatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/layout_text_username"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/CreateGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/UserName"
            android:text="@string/label_create_goal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/GroupList_layout"
        android:layout_width="match_parent"
        android:layout_height="281dp"
        android:background="#F4FAF3"
        android:paddingBottom="24dp">

        <ListView
            android:id="@+id/GroupList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_key"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/CreateGroupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/GroupList"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/layout_button_create_group" />

        <Button
            android:id="@+id/JoinGroupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CreateGroupButton"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/layout_button_join_group" />

    </RelativeLayout>


</LinearLayout>