<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GoalSettingActivity"
    tools:showIn="@layout/activity_goal_setting">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goal_setting_cost_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <cs446.budgetme.EndOnlyEditText
            android:id="@+id/goal_setting_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_limit"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goal_setting_start_date_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/goal_setting_cost_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goal_setting_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/label_start_date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goal_setting_end_date_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/goal_setting_start_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goal_setting_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/label_end_date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goal_setting_category_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goal_setting_end_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goal_setting_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_categories"
            android:lines="1"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/goal_setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/label_create_goal"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        app:layout_constraintRight_toRightOf="@id/goal_setting_category_layout"
        app:layout_constraintTop_toBottomOf="@id/goal_setting_category_layout"/>


</androidx.constraintlayout.widget.ConstraintLayout>